--- a/style.css
+++ b/style.css
@@ -111,7 +111,21 @@ body{
   text-align: center;
 }
 
+.button-copy-password{  
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
 .container-password:hover .tooltip{
+  padding: 15px 32px;
   bottom: 50px;
   visibility: visible;
   opacity: 1;
